--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,15 @@
     <title>Tarot</title>
    
     <link rel="stylesheet" href="./styles.css">
-    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <!-- <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script> -->
 </head>
 <body>
     
     <!-- static container template-->
     <!-- background image -->
-    <h1>Tarot</h1>
-    <div id="tarotApp">
+    <h1>Tarott</h1>
+    <div id="app">
         
     </div>
           <!-- dynamic react application -->
